@@ -1,5 +1,9 @@
+import java.util.zip.ZipEntry
+import java.util.zip.ZipFile
+import java.util.zip.ZipOutputStream
+
 val minecraftVersion: String by project
-val fabricLoaderVersion: String by project
+val forgeVersion: String by project
 
 architectury {
     platformSetupLoomIde()
@@ -8,30 +12,40 @@ architectury {
 
 loom {
     accessWidenerPath.set(file("${project(":architectury-$minecraftVersion:common").projectDir}/src/main/resources/FastMinecraft.accesswidener"))
+
+    forge {
+        convertAccessWideners.set(true)
+        extraAccessWideners.add(loom.accessWidenerPath.get().asFile.name)
+        mixinConfig("mixins.fastmc-core.json")
+        mixinConfig("mixins.fastmc-accessor.json")
+        mixinConfig("mixins.fastmc-patch.json")
+    }
 }
 
 dependencies {
-    modImplementation("net.fabricmc:fabric-loader:$fabricLoaderVersion")
+    forge("net.minecraftforge:forge:$minecraftVersion-$forgeVersion")
 
     runtimeOnly(project.project(":architectury-$minecraftVersion:common").sourceSets.main.get().output)
-    library(project(":architectury-$minecraftVersion:common", "transformProductionFabric"))
+    library(project(":architectury-$minecraftVersion:common", "transformProductionForge"))
     libraryImplementation(project(":shared:java8"))
 }
 
 tasks {
     processResources {
         from(loom.accessWidenerPath.get().asFile.path)
-        filesMatching("fabric.mod.json") {
+        filesMatching("*/mods.toml") {
             expand("version" to project.version)
         }
     }
+
+    loom.officialMojangMappings()
 
     classes {
         dependsOn(project(":architectury-$minecraftVersion:common").tasks.classes)
     }
 
     jar {
-        dependsOn(project(":architectury-$minecraftVersion:common").tasks["transformProductionFabric"])
+        dependsOn(project(":architectury-$minecraftVersion:common").tasks["transformProductionForge"])
         from(
             configurations["library"].map {
                 if (it.isDirectory) it else zipTree(it)
@@ -41,7 +55,41 @@ tasks {
         archiveClassifier.set("dev")
     }
 
+    // Hacky mapping fix
+    val patchJar by register<Task>("patchJar") {
+        doLast {
+            val file = File(
+                project.buildDir,
+                "libs/${rootProject.name}-${project.name}-$minecraftVersion-${project.version}-release.jar"
+            )
+            val zipFile = ZipFile(file)
+            val text =
+                zipFile.getInputStream(zipFile.getEntry("META-INF/accesstransformer.cfg")).readBytes().decodeToString()
+                    .replace("net/minecraft/util/math/Matrix3f", "net/minecraft/util/math/vector/Matrix3f")
+                    .replace("net/minecraft/util/math/Matrix4f", "net/minecraft/util/math/vector/Matrix4f")
+
+            val cacheZipEntries = zipFile.entries().asSequence()
+                .filter { it.name != "META-INF/accesstransformer.cfg" }
+                .map { ZipEntry(it.name) to zipFile.getInputStream(it).readBytes() }
+                .toList()
+
+            ZipOutputStream(file.outputStream()).use { zip ->
+                cacheZipEntries.forEach { (zipEntry, bytes) ->
+                    zip.putNextEntry(zipEntry)
+                    zip.write(bytes)
+                    zip.closeEntry()
+                }
+
+                zip.putNextEntry(ZipEntry("META-INF/accesstransformer.cfg"))
+                zip.write(text.encodeToByteArray())
+                zip.closeEntry()
+            }
+        }
+    }
+
     remapJar {
+        finalizedBy(patchJar)
+
         duplicatesStrategy = DuplicatesStrategy.INCLUDE
 
         archiveBaseName.set(rootProject.name)
@@ -81,7 +129,11 @@ tasks {
                     "-XX:FlightRecorderOptions=stackdepth=512",
                     "-Dfabric.dli.config=${project.projectDir.absolutePath}/.gradle/loom-cache/launch.cfg",
                     "-Dfabric.dli.env=client",
-                    "-Dfabric.dli.main=net.fabricmc.loader.launch.knot.KnotClient",
+                    "-XX:+IgnoreUnrecognizedVMOptions",
+                    "--add-exports=java.base/sun.security.util=ALL-UNNAMED",
+                    "--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming",
+                    "--add-opens=java.base/java.util.jar=ALL-UNNAMED",
+                    "-Dfabric.dli.main=net.minecraftforge.userdev.LaunchTesting",
                     "-Darchitectury.main.class=${project.projectDir.absolutePath}/.gradle/architectury/.main_class",
                     "-Darchitectury.runtime.transformer=${project.projectDir.absolutePath}/.gradle/architectury/.transforms",
                     "-Darchitectury.properties=${project.projectDir.absolutePath}/.gradle/architectury/.properties",
@@ -93,6 +145,18 @@ tasks {
                     """
                         <component name="ProjectRunConfigurationManager">
                           <configuration default="false" name="${project.name}-${minecraftVersion} runClient" type="Application" factoryName="Application">
+                            <envs>
+                              <env name="MOD_CLASSES" value="main%%${project.projectDir.absolutePath}/build/resources/main;main%%${project.projectDir.absolutePath}/build/classes/java/main;main%%${project.projectDir.absolutePath}/build/classes/kotlin/main" />
+                              <env name="MCP_MAPPINGS" value="loom.stub" />
+                              <env name="MCP_VERSION" value="20210115.111550" />
+                              <env name="FORGE_VERSION" value="$forgeVersion" />
+                              <env name="assetIndex" value="1.16.5-1.16" />
+                              <env name="assetDirectory" value="${gradle.gradleUserHomeDir}/caches/fabric-loom/assets" />
+                              <env name="nativesDirectory" value="${rootProject.projectDir.absolutePath}/.gradle/loom-cache/natives/1.16.5" />
+                              <env name="FORGE_GROUP" value="net.minecraftforge" />
+                              <env name="target" value="fmluserdevclient" />
+                              <env name="MC_VERSION" value="$minecraftVersion" />
+                            </envs>
                             <option name="MAIN_CLASS_NAME" value="dev.architectury.transformer.TransformerRuntime" />
                             <module name="${rootProject.name}.architectury-${minecraftVersion}.${project.name}.main" />
                             <option name="PROGRAM_PARAMETERS" value="--width 1280 --height 720 --username TEST" />
